examples/invalid_syntax/symbols/input.as
34asd: .stop ; Invalid name syntax
a12345678901234567890123456789L: .stop ; Invalid symbol name length

; same symbols
A: stop
A: stop

; Symbole with macro name
mcro same
mcroend
same: stop

; Invalid syntax
asd-sad: stop